ファーストクラスコレクションを使用する

--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Change.cs" />
     <Compile Include="Coin.cs" />
     <Compile Include="Drink.cs" />
     <Compile Include="DrinkType.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
+    <Compile Include="StockOf100Yen.cs" />
     <Compile Include="VendingMachine.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
