--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CashBox.cs" />
     <Compile Include="Change.cs" />
     <Compile Include="Coin.cs" />
+    <Compile Include="CoinMech.cs" />
     <Compile Include="Drink.cs" />
     <Compile Include="DrinkType.cs" />
     <Compile Include="Form1.cs">
@@ -60,7 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
-    <Compile Include="StockOf100Yen.cs" />
+    <Compile Include="Storage.cs" />
     <Compile Include="VendingMachine.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
