--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -46,23 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CashBox.cs" />
-    <Compile Include="Change.cs" />
-    <Compile Include="Coin.cs" />
-    <Compile Include="CoinMech.cs" />
-    <Compile Include="Drink.cs" />
-    <Compile Include="DrinkType.cs" />
+    <Compile Include="MoneyPackage\CashBox.cs" />
+    <Compile Include="MoneyPackage\Change.cs" />
+    <Compile Include="MoneyPackage\Coin.cs" />
+    <Compile Include="MoneyPackage\CoinMech.cs" />
+    <Compile Include="DrinkPackage\Drink.cs" />
+    <Compile Include="DrinkPackage\DrinkType.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Money.cs" />
+    <Compile Include="MoneyPackage\Money.cs" />
+    <Compile Include="MoneyPackage\Payment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stock.cs" />
-    <Compile Include="Storage.cs" />
+    <Compile Include="StoragePackage\Stock.cs" />
+    <Compile Include="StoragePackage\Storage.cs" />
     <Compile Include="VendingMachine.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
