DrinkType列挙型を追加

--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drink.cs" />
+    <Compile Include="DrinkType.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
