--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -57,6 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StackOf100Yen.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="VendingMachine.cs" />
     <EmbeddedResource Include="Form1.resx">
