--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="Change.cs" />
     <Compile Include="Coin.cs" />
+    <Compile Include="CoinMech.cs" />
+    <Compile Include="CoinType.cs" />
     <Compile Include="Drink.cs" />
     <Compile Include="DrinkType.cs" />
     <Compile Include="Form1.cs">
@@ -59,8 +61,9 @@
     <Compile Include="Money.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StackOf100Yen.cs" />
+    <Compile Include="CashBox.cs" />
     <Compile Include="Stock.cs" />
+    <Compile Include="Storage.cs" />
     <Compile Include="VendingMachine.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
