--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CoinType.cs" />
     <Compile Include="Drink.cs" />
     <Compile Include="DrinkType.cs" />
+    <Compile Include="FiveHundredCoin.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +60,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Money.cs" />
+    <Compile Include="OneHundredCoin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CashBox.cs" />
