else句を使用しない：完了　Paymentクラスを追加＆バグフィックス

--- a/OOPPractice/OOPPractice.csproj
+++ b/OOPPractice/OOPPractice.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Money.cs" />
     <Compile Include="OneHundredCoin.cs" />
+    <Compile Include="Payment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CashBox.cs" />
